[gd_scene load_steps=14 format=3 uid="uid://cpag5ybs4bm80"]

[ext_resource type="PackedScene" uid="uid://cqbjfr11io3td" path="res://Scum/Card/Card.tscn" id="1"]
[ext_resource type="Script" path="res://Scum/ScumGameMaster.gd" id="1_wsb5x"]
[ext_resource type="Script" path="res://Scum/Dealer.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dtcw4emihf4wo" path="res://Scum/Card/CardBack.png" id="3"]
[ext_resource type="Script" path="res://Scum/PlayerHelper.gd" id="6_m7ffs"]
[ext_resource type="Theme" uid="uid://cx1hwmnnhtbn3" path="res://UITheme.tres" id="6_skg5e"]
[ext_resource type="PackedScene" uid="uid://b7prk2dwncgs2" path="res://Scum/HowToPlay.tscn" id="7_j3io2"]
[ext_resource type="Texture2D" uid="uid://c5x6gfiistu47" path="res://Scum/LeaveIcon.png" id="7_p6x1y"]
[ext_resource type="PackedScene" uid="uid://cufku5m34kupi" path="res://MessageBox.tscn" id="9_p56xu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3knn"]
bg_color = Color(0.0745098, 0.0705882, 0.0862745, 0.784314)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_csyff"]
bg_color = Color(0.286275, 0.27451, 0.317647, 0.784314)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rfetm"]
bg_color = Color(0.0745098, 0.0705882, 0.0862745, 0.784314)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="LabelSettings" id="LabelSettings_okc0c"]
font_size = 22
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="TycoonScene" type="Node"]

[node name="Dealer" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2")

[node name="Center" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayedCards" type="Node2D" parent="Center"]
visible = false
position = Vector2(40, 0)

[node name="ExtraCard3" parent="Center/PlayedCards" instance=ExtResource("1")]
position = Vector2(0, 0)
static_card = true

[node name="ExtraCard2" parent="Center/PlayedCards" instance=ExtResource("1")]
position = Vector2(0, 0)
static_card = true

[node name="ExtraCard" parent="Center/PlayedCards" instance=ExtResource("1")]
position = Vector2(0, 0)
static_card = true

[node name="BaseCard" parent="Center/PlayedCards" instance=ExtResource("1")]
unique_name_in_owner = true
position = Vector2(0, 0)
static_card = true

[node name="Deck" type="Node2D" parent="Center"]
position = Vector2(-40, 0)

[node name="Card" type="Sprite2D" parent="Center/Deck"]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3")

[node name="Card2" type="Sprite2D" parent="Center/Deck"]
position = Vector2(0, -2)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3")

[node name="Card3" type="Sprite2D" parent="Center/Deck"]
position = Vector2(0, -4)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3")

[node name="Card4" type="Sprite2D" parent="Center/Deck"]
position = Vector2(0, -6)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3")

[node name="Card5" type="Sprite2D" parent="Center/Deck"]
position = Vector2(0, -8)
scale = Vector2(0.1, 0.1)
texture = ExtResource("3")

[node name="Players" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_m7ffs")

[node name="FollowPath" type="Path2D" parent="Players"]

[node name="Container" type="Node2D" parent="Players"]
process_mode = 1

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1
theme = ExtResource("6_skg5e")

[node name="ReturnToLobby" type="Control" parent="UI"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="LobbyButton" type="Button" parent="UI/ReturnToLobby"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -30.0
offset_bottom = 30.0
grow_horizontal = 0
tooltip_text = "Return to Lobby"
theme_override_styles/normal = SubResource("StyleBoxFlat_o3knn")
theme_override_styles/hover = SubResource("StyleBoxFlat_csyff")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rfetm")
icon = ExtResource("7_p6x1y")
expand_icon = true

[node name="CenterUI" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PassRoundLayout" type="VBoxContainer" parent="UI/CenterUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -49.0
offset_top = -20.0
offset_right = 49.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2

[node name="PassRoundButton" type="Button" parent="UI/CenterUI/PassRoundLayout"]
unique_name_in_owner = true
offset_top = 89.0
offset_right = 98.0
offset_bottom = 120.0
text = "Pass Round"

[node name="WinnerDisplay" type="Control" parent="UI"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Match" type="PanelContainer" parent="UI/WinnerDisplay"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="Layout" type="VBoxContainer" parent="UI/WinnerDisplay/Match"]
offset_left = 8.0
offset_top = 8.0
offset_right = 211.0
offset_bottom = 81.0

[node name="Label" type="Label" parent="UI/WinnerDisplay/Match/Layout"]
offset_right = 203.0
offset_bottom = 34.0
text = "Match 1 Standings:"
label_settings = SubResource("LabelSettings_okc0c")
horizontal_alignment = 1

[node name="PlayerStandings" type="VBoxContainer" parent="UI/WinnerDisplay/Match/Layout"]
offset_top = 38.0
offset_right = 203.0
offset_bottom = 38.0

[node name="NextMatchButton" type="Button" parent="UI/WinnerDisplay/Match/Layout"]
offset_left = 31.0
offset_top = 42.0
offset_right = 171.0
offset_bottom = 73.0
size_flags_horizontal = 4
disabled = true
text = "Start Next Match"

[node name="Game" type="Panel" parent="UI/WinnerDisplay"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HowToPlay" parent="UI" instance=ExtResource("7_j3io2")]

[node name="Message" parent="UI" instance=ExtResource("9_p56xu")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(480, 60)
offset_left = -240.0
offset_right = 240.0

[node name="GameMaster" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_wsb5x")
base_colour = Color(0.2, 0.2, 0.25098, 1)
current_turn_colour = Color(0.176471, 0.282353, 0.470588, 1)
eliminated_colour = Color(0.25098, 0.129412, 0.145098, 1)
